# Arteranos-Loader

./: .editorconfig  .gitignore  .gitmodules  Arteranos-Loader.sln  ArteranosLoader.sln  CMakeLists.txt  Loader.sln  README.md  SplashProgress.sln
Arteranos-Loader/: App.config  Arteranos-Loader.csproj  Arteranos-Loader.sln  ArteranosLoader.csproj  BootstrapData.cs  Extensions.cs  Form1.Designer.cs  Form1.cs  Form1.resx  IPFSConnection.cs  ISplash.cs  Program.cs  Splash.Designer.cs  Splash.cs  SplashSilent.cs  Utils.cs  packages.config
Arteranos-Loader/LoaderCore/: BootstrapData.cs  Core.cs  Extensions.cs  IPFSConnection.cs  Networking.cs  WebDownload.cs
Arteranos-Loader/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Arteranos-Loader/ViewModels/: SplashWindowViewModel.cs  ViewModelBase.cs
Arteranos-Loader/Views/: SilentProgress.cs  SplashWindow.axaml  SplashWindow.axaml.cs
ArteranosLoader/: App.axaml  App.axaml.cs  Program.cs
ArteranosLoader/LoaderCore/: Extensions.cs  Utils.cs
ArteranosLoader/Views/: IProgressReporter.cs
IPFS_RPC_API/: IPFS_RPC_API.csproj
Loader/: BootstrapData.cs  Extensions.cs  Loader.csproj  Loader.sln  Program.cs  Splash.Designer.cs  Splash.cs  Splash.resx  Utils.cs
Loader/Properties/: AssemblyInfo.cs  Resources.Designer.cs
Setup/: WIX.fwrules.wxs  WIX.template.in
Setup/Linux/: Arteranos-Server-Start.in  init_d_arteranos.in
Setup/Windows/: NSIS.addFwRules.nsi.in  NSIS.rmFwRules.nsi.in  WIX.fwrules.wxs  WIX.moreShortcuts.wxs  WIX.template.in
SplashProgress/: App.axaml  App.axaml.cs  Program.cs  SplashProgress.csproj
SplashProgress/LoaderCore/: BootstrapData.cs  Core.cs  Extensions.cs  IPFSConnection.cs  Utils.cs  WebDownload.cs
SplashProgress/ViewModels/: SplashWindowViewModel.cs  ViewModelBase.cs
SplashProgress/Views/: IProgressReporter.cs  SilentProgress.cs  SplashWindow.axaml  SplashWindow.axaml.cs
ipfs-rpc-api/: app.config  ipfs-rpc-api.csproj  packages.config
ipfs-rpc-api/Properties/: AssemblyInfo.cs
